Fix overflow issue on small devices
- Previous behaviour:
    Large subpage content doesnt show the end. and since container is
    100vh, and noscale, the content is not shown
- Setting overflow-y on just body resulted in extra space at the end due
to transform for bg
- Setting overflow hidden for container fixed this

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -408,6 +408,7 @@ body {
   color: $color-primary;
   background-color: #1B1C21;
   overflow: hidden;
+  overflow-y: scroll;
 }
 
 a {
@@ -417,6 +418,7 @@ a {
 }
 
 .container {
+  overflow: hidden;
   position: relative;
   display: flex;
   flex-direction: column;
